; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c__esp_error_check_failed.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c__esp_error_check_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"ESP_ERROR_CHECK\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_esp_error_check_failed(i32 %0, i8* %1, i32 %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i8*, i8** %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = call i32 @esp_error_check_failed_print(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %11, i8* %12, i32 %13, i8* %14, i8* %15)
  %17 = call i32 (...) @invoke_abort()
  ret void
}

declare dso_local i32 @esp_error_check_failed_print(i8*, i32, i8*, i32, i8*, i8*) #1

declare dso_local i32 @invoke_abort(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
